--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -2,87 +2,97 @@
   width: 60%;
   min-width: 700px;
   margin: 10px auto;
-  background-color: $em-bg-gray-medium;
-  border: 1px solid $em-border-gray;
 
-  form{
-    .em-form-control{
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      border-bottom: 1px solid $em-border-gray;
+  .page-header{
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    user-select: none;
+  }
 
-      .field-label{
-        padding: 5px 0;
-        width: 35%;
-        min-width: 200px;
-        font-weight: bold;
-        color: $em-text-blue;
-      }
-      .field-value{
-        padding: 10px 0 0 0;
-        width: 65%;
+  .page-content {
+    background-color: $em-bg-gray-medium;
+    border: 1px solid $em-border-gray;
 
-        input, select, textarea{
-          height: 30px;
-          font-size: 12px;
-          width: 450px;
-          outline: none;
+    form{
+      .em-form-control{
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid $em-border-gray;
 
-          &:disabled{
-            cursor: default;
-            opacity: 0.6;
+        .field-label{
+          padding: 5px 0;
+          width: 35%;
+          min-width: 200px;
+          font-weight: bold;
+          color: $em-text-blue;
+        }
+        .field-value{
+          padding: 10px 0 0 0;
+          width: 65%;
+
+          input, select, textarea{
+            height: 30px;
+            font-size: 12px;
+            width: 450px;
+            outline: none;
+
+            &:disabled{
+              cursor: default;
+              opacity: 0.6;
+            }
+          }
+          textarea{
+            height: 250px;
+            resize: none;
+            font-size: 12px;
+            width: 100%;
+          }
+
+          input[type="text"], textarea{
+            border-radius: 3px;
+            margin: 0 0 4px;
+            max-width: 100%;
+            padding: 8px;
+            -webkit-outline: none;
+            outline: none;
+
+            &:focus{
+              //background-color: $em-bg-white;
+            }
+          }
+          input[type="reset"], input[type="submit"], input[type="button"]{
+            margin-right: 10px;
+            outline: none;
+            font-size: 13px;
+            width: auto;
+            cursor: pointer;
+            border-radius: 25px;
+            border: 1px solid transparent;
+            font-weight: 600;
+            min-height: 36px;
+            padding: 0 16px;
+            vertical-align: middle;
+          }
+          input[type="submit"]{
+            background-color: #ff5e3a;
+            border-color: #ff5e3a;
+            color: #fff;
+          }
+          input.cancel{
+
           }
         }
-        textarea{
-          height: 250px;
-          resize: none;
+        .sub-text{
+          color: $em-text-gray-light;
+          font-weight: normal;
           font-size: 12px;
-          width: 100%;
         }
 
-        input[type="text"], textarea{
-          border-radius: 3px;
-          margin: 0 0 4px;
-          max-width: 100%;
-          padding: 8px;
-          -webkit-outline: none;
-          outline: none;
-
-          &:focus{
-            //background-color: $em-bg-white;
-          }
+        &:last-child{
+          border-bottom: none;
         }
-        input[type="reset"], input[type="submit"], input[type="button"]{
-          margin-right: 10px;
-          outline: none;
-          font-size: 13px;
-          width: auto;
-          cursor: pointer;
-          border-radius: 25px;
-          border: 1px solid transparent;
-          font-weight: 600;
-          min-height: 36px;
-          padding: 0 16px;
-          vertical-align: middle;
-        }
-        input[type="submit"]{
-          background-color: #ff5e3a;
-          border-color: #ff5e3a;
-          color: #fff;
-        }
-        input.cancel{
-
-        }
-      }
-      .sub-text{
-        color: $em-text-gray-light;
-        font-weight: normal;
-        font-size: 12px;
-      }
-
-      &:last-child{
-        border-bottom: none;
       }
     }
   }
