Adding preference window for user settings and preferences .

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -145,6 +145,7 @@
             i{
               zoom: 1.4;
               vertical-align: middle;
+              width: 16px;
             }
           }
           &::before{
