--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -18,6 +18,7 @@
 @import './postinterestsmodal';
 @import './uploadphotomodal';
 @import './messages';
+@import './preference';
 @import './notfound';
 
 @import '../../../node_modules/react-datepicker/dist/react-datepicker.min.css';
