--- a/server/scss/header.scss
+++ b/server/scss/header.scss
@@ -150,6 +150,7 @@
             i{
               zoom: 1.4;
               vertical-align: middle;
+              width: 16px;
             }
           }
           &::before{
