--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -16,12 +16,12 @@
   z-index: 1001;
 
   .left-content {
-    flex: 0 0 200px;
+    flex: 1;
     a{
       text-decoration: none;
 
       .app-logo {
-        min-width: 200px;
+        min-width: 180px;
         color: $em-text-white;
         margin: 0 10px;
         font-weight: bold;
@@ -35,7 +35,7 @@
           color: $em-text-gray-light;
         }
         .app-name{
-          padding: 0 10px;
+          padding: 0 5px;
         }
         i{
           font-size: 1.5rem;
@@ -68,6 +68,11 @@
         }
         &:active {
           color: $em-text-gray-light;
+        }
+      }
+      @include mobile(){
+        .menu-item a{
+          padding: 0 5px;
         }
       }
     }
