--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,6 @@
+@import "config/viewport.scss";
+@import "config/layout.scss";
+
 @import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import './reset.scss';
 @import './variables.scss';
@@ -27,6 +30,9 @@
 ::selection {
   background-color: $em-bg-gray-verylight;
 }
+html{
+  height:100%;
+}
 body{
   margin: 0;
   font-family: sans-serif;
@@ -34,7 +40,10 @@ body{
   color: $em-text-gray;
   background-color: $em-bg-gray-light;
   overflow-y: auto;
-
+  height:100%;
+}
+body, html{
+  //overflow-x: hidden;
 }
 body.noscroll{
   overflow: hidden;
@@ -54,7 +63,7 @@ body, input, textarea, select, header, article, section, aside, pre, button {
 input, select, textarea, select, radio {
   background-color: $em-input-bg-color;
   border: 1px solid $em-border-gray;
-  color: $em-text-white;
+  color: $em-text-gray;
   outline: none;
 }
 input[type="button"],
@@ -128,25 +137,6 @@ select:-webkit-autofill:active,{
   to {
     width: 20px;
   }
-}
-
-input[type="color"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="email"],
-input[type="month"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="tel"],
-input[type="text"],
-input[type="time"],
-input[type="url"],
-input[type="week"],
-select:focus,
-textarea {
-  font-size: 16px;
 }
 
 
