--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -1,6 +1,7 @@
 .posts-container {
   display: flex;
   justify-content: center;
+  padding: 10px;
 
   .nav-bar{
     width: 285px;
@@ -17,6 +18,13 @@
       margin: 10px 0;
       background-color: $em-bg-gray-medium;
       border-radius: 5px;
+
+      &:first-child{
+        margin-top: 0px;
+      }
+      &:last-child{
+        margin-bottom: 0px;
+      }
 
       .post-body {
         padding: 25px 25px 0 25px;
@@ -62,6 +70,29 @@
 
             .dropdown {
               cursor: pointer;
+
+              .post-action-menu{
+                width: 30px;
+                height: 30px;
+                border-radius: 25px;
+                user-select: none;
+
+                //display: flex;
+                //justify-content: center;
+
+                @media (hover: hover) and (pointer: fine) {
+                  &:hover {
+                    background-color: $em-bg-gray-light;
+                  }
+                }
+                &::before{
+                  content: '...';
+                  padding-bottom: 5px;
+                  padding-left: 8px;
+                  font-weight: bold;
+                  font-size: 16px;
+                }
+              }
 
               .dropdown-menu {
                 max-width: 200px;
@@ -114,7 +145,7 @@
                 &::before {
                   content: '';
                   position: absolute;
-                  right: 1%;
+                  right: 9px;
                   top: -4px;
                   width: 0;
                   height: 0;
@@ -151,31 +182,20 @@
           font-size: 12px;
 
           .likes {
-            flex: 1;
+            //flex: 1;
             display: flex;
             //cursor: pointer;
             .logo, .count {
               padding: 0 5px;
             }
             .logo {
+              padding-left: 0;
               zoom: 1.2;
             }
-          }
-          .interests {
-            flex: 1;
-            display: flex;
-            cursor: pointer;
-            .logo, .count {
-              padding: 0 5px;
-            }
-            .logo {
-              zoom: 1.2;
+            .count{
+              padding-left: 0;
             }
           }
-          //.liked{
-          //  text-align: center;
-          //  flex: 1 0 0;
-          //}
           .comments {
             flex: 1;
             display: flex;
@@ -184,6 +204,24 @@
             }
             .logo {
               zoom: 1.2;
+            }
+            .count{
+              padding-left: 0;
+            }
+          }
+          .interests {
+            //flex: 1;
+            display: flex;
+            cursor: pointer;
+            .logo, .count {
+              padding: 0 5px;
+            }
+            .logo {
+              zoom: 1.2;
+            }
+            .count{
+              padding-right: 0;
+              padding-left: 0;
             }
           }
           i {
@@ -197,7 +235,7 @@
           border-bottom: none;
 
           .post-control {
-            margin: 5px;
+            margin: 5px 0;
             flex: 1 0 0;
 
             &:first-child {
@@ -222,8 +260,10 @@
               &:active {
                 opacity: 0.8;
               }
-              &:hover {
-                background-color: $em-bg-gray-dark;
+              @media (hover: hover) and (pointer: fine) {
+                &:hover {
+                  background-color: $em-bg-gray-dark;
+                }
               }
               &:focus {
                 text-decoration: none;
@@ -233,6 +273,11 @@
           }
         }
       }
+      @include mobile(){
+        .post-body{
+          padding: 10px 10px 0 10px
+        }
+      }
     }
 
     .empty-message {
@@ -240,6 +285,12 @@
       font-weight: bold;
       text-align: center;
       padding: 30px 0;
+    }
+  }
+  @include mobile(){
+    .posts{
+      min-width: auto;
+      width: auto;
     }
   }
   .back-to-top a {
@@ -349,6 +400,11 @@
           background-color: #fff;
         }
       }
+    }
+  }
+  @include mobile(){
+    .sidebar{
+      display: none;
     }
   }
 }
