--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -28,7 +28,7 @@
 
         picture img {
           width: 100%;
-          max-height: 200px;
+          //max-height: 200px;
         }
         .change-pic {
           position: absolute;
