--- a/server/views/partial/footer.ejs
+++ b/server/views/partial/footer.ejs
@@ -1,6 +1,6 @@
 <div id="footer">
     <div class="footer-message">
-        Copyright @ 2021 Express To Match, India. All rights reserved.
-        <a href="/privacy" target="_blank">Privacy Policy</a> and <a href="/terms" target="_blank">Terms of Use</a>
+        <div>Copyright @ 2021 Express To Match, India. All rights reserved.&nbsp;</div>
+        <div><a href="/privacy" target="_blank">Privacy Policy</a> . <a href="/terms" target="_blank">Terms of Use</a></div>
     </div>
 </div>
