--- a/client/src/styles/content.scss
+++ b/client/src/styles/content.scss
@@ -2,11 +2,11 @@
   flex: 1 1 auto;
   //margin: 0 auto;
   //width: 80%;
-  min-width: 820px;
+  //min-width: 820px;
   //padding: 10px;
 }
 @include mobile(){
-  #content{
-    min-width: auto;
-  }
+  //#content{
+  //  min-width: auto;
+  //}
 }
