--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -14,6 +14,8 @@
 @import './content.scss';
 @import './profile.scss';
 @import './posts.scss';
+@import './navbar.scss';
+@import './sidebar.scss';
 @import './comments.scss';
 @import './createpost.scss';
 @import './contactus.scss';
