--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -1,12 +1,8 @@
 .posts-container {
   display: flex;
-  justify-content: center;
-  padding: 10px;
+  justify-content: stretch;
+  padding: 10px 0;
 
-  .nav-bar{
-    width: 285px;
-    min-width: 285px;
-  }
 
   .posts {
     margin: 0 auto;
@@ -323,91 +319,14 @@
       zoom: 1.5;
     }
   }
-  .sidebar {
-    width: 285px;
-    min-width: 285px;
-
-    .sidebar-content{
-      position: sticky;
-      right: 0;
-      top: 60px; //Header plus margins, TODO: Move to a variable for header height
-      overflow-x: hidden;
-      overflow-y: auto;
-      max-height: calc(100vh - 60px); //Again same variable to be used
-      height: 100%;
-
-      .panel {
-        margin-bottom: 5px;
-        //border: 1px solid $em-border-gray;
-        display: flex;
-        flex-flow: column;
-        padding: 10px 20px 5px 20px;
-
-        .date-filter,
-        .quick-filter {
-          margin-bottom: 5px;
-          border: 1px solid $em-border-gray;
-        }
-        button.today-filter,
-        button.clear-quick-filter {
-          align-self: flex-end;
-          margin: 10px 0;
-          background-color: $em-alt-btn-bg;
-          color: $em-alt-btn-text;
-          -moz-outline: none;
-          -webkit-outline: none;
-          outline: none;
-          border: 1px solid transparent;
-          font-size: 13px;
-          width: auto;
-          cursor: pointer;
-          border-radius: 25px;
-          font-weight: 600;
-          min-height: 36px;
-          padding: 0 16px;
-          vertical-align: middle;
-
-          &:active {
-            background: $em-alt-btn-bg-active;
-            color: $em-alt-btn-text-active;
-          }
-        }
-
-        .quick-filter {
-          display: flex;
-          justify-content: flex-start;
-          align-items: stretch;
-          flex-flow: column nowrap;
-          background-color: $em-bg-gray-medium;
-
-          .filter-item {
-            height: 28px;
-            border-bottom: 1px solid $em-border-gray;
-            line-height: 28px;
-            padding: 0 0 0 10px;
-            cursor: pointer;
-            font-size: 13px;
-
-            &.selected {
-              border-left: 5px solid;
-              padding: 0 0 0 5px;
-              color: $em-text-blue;
-            }
-            &:last-child {
-              border-bottom: none;
-            }
-          }
-        }
-
-        .more-filter {
-          background-color: #fff;
-        }
-      }
-    }
+}
+@include tablet(){
+  .posts-container{
+    padding: 10px 0;
   }
-  @include mobile(){
-    .sidebar{
-      display: none;
-    }
+}
+@include mobile(){
+  .posts-container{
+    padding: 10px;
   }
 }
