Adding how to Use section in Sidebar

--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -74,8 +74,8 @@
     display: none;
   }
 }
-//@include tablet(){
-//  .nav-bar{
-//    display: none;
-//  }
-//}
+@include tablet(){
+  .nav-bar{
+    display: none;
+  }
+}
