adding carousel, green color for highlights etc...

--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -226,6 +226,14 @@
               padding-right: 0;
               padding-left: 0;
             }
+            .activity{
+              user-select: none;
+              cursor: default;
+            }
+            .highlight{
+              color: limegreen;
+              font-weight: bold;
+            }
           }
           i {
             zoom: 1.2;
