--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -29,6 +29,9 @@
 @import '../../../node_modules/react-datepicker/dist/react-datepicker.min.css';
 @import '../../../node_modules/react-bootstrap-typeahead/css/Typeahead.min.css';
 
+@import "../../../node_modules/slick-carousel/slick/slick.css";
+@import "../../../node_modules/slick-carousel/slick/slick-theme.css";
+
 ::selection {
   background-color: $em-bg-gray-verylight;
 }
