npm update and audit fix

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
 
-    <% include partial/header.ejs %>
+    <%- include ("partial/header.ejs") %>
 
     <section id="content">
 
@@ -93,7 +93,7 @@
         </div>
     </section>
 
-    <% include partial/footer.ejs %>
+    <%- include ("partial/footer.ejs") %>
 
 </div>
 </body>
