--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-        <% include partial/header.ejs %>
+        <%- include ("partial/header.ejs") %>
         <article class="login">
             <div class="login-container">
                 <div class="header">
@@ -78,7 +78,7 @@
             </div>
         </article>
 
-        <% include partial/footer.ejs %>
+        <%- include ("partial/footer.ejs") %>
 
     </div>
 </body>
