--- a/server/views/privacy.ejs
+++ b/server/views/privacy.ejs
@@ -33,7 +33,7 @@
 </head>
 <body>
 <div class="container">
-    <%- include('partial/header.ejs', {generic: true}); %>
+    <%-- include('partial/header.ejs', {generic: true}); %>
     <div class="privacy-content">
         <div>
             <h2>Application Privacy Statement</h2>
@@ -134,7 +134,7 @@
 
     </div>
 
-    <% include partial/footer.ejs %>
+    <%- include ("partial/footer.ejs") %>
 
 </div>
 </body>
