--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -23,7 +23,7 @@
 </head>
 <body>
 <div class="container">
-    <% include partial/header.ejs %>
+    <%- include ("partial/header.ejs") %>
     <article class="sign-up">
         <div class="sign-up-container">
             <div class="header">
@@ -83,7 +83,7 @@
         </div>
     </article>
 
-    <% include partial/footer.ejs %>
+    <%- include ("partial/footer.ejs") %>
 
 </div>
 </body>
