--- a/server/views/forgot.ejs
+++ b/server/views/forgot.ejs
@@ -23,7 +23,7 @@
 </head>
 <body>
 <div class="container">
-    <% include partial/header.ejs %>
+    <%- include ("partial/header.ejs") %>
     <article class="forgot-password">
         <div class="forgot-password-container">
             <div class="header">
@@ -57,7 +57,7 @@
         </div>
     </article>
 
-    <% include partial/footer.ejs %>
+    <%- include ("partial/footer.ejs") %>
 
 </div>
 </body>
