--- a/server/views/reset.ejs
+++ b/server/views/reset.ejs
@@ -23,7 +23,7 @@
 </head>
 <body>
 <div class="container">
-    <% include partial/header.ejs %>
+    <%- include ("partial/header.ejs") %>
     <article class="reset-password">
         <div class="reset-password-container">
             <div class="header">
@@ -62,7 +62,7 @@
         </div>
     </article>
 
-    <% include partial/footer.ejs %>
+    <%- include ("partial/footer.ejs") %>
 
 </div>
 </body>
